--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vòng Quay Tên Siêu Đẹp</title>
+    <title>Vòng Quay cho TRÀ XINH </title>
     <style>
         * {
             margin: 0;
@@ -359,7 +359,7 @@
     <div class="particles" id="particles"></div>
 
     <div class="container">
-        <h1>🎡 VÒNG QUAY THẦN TÀI 🎡</h1>
+        <h1>🎡 RADOM CỦA KHÔI TRÀ   🎡</h1>
         
         <div class="wheel-container">
             <div class="pulse-ring"></div>
@@ -392,13 +392,9 @@
         <div class="names-input">
             <label for="namesList">📝 Danh sách tên (mỗi tên một dòng):</label>
             <textarea id="namesList" placeholder="Nguyễn Văn A&#10;Trần Thị B&#10;Lê Văn C&#10;Phạm Thị D">Nguyễn Văn A
-Trần Thị B
-Lê Văn C
-Phạm Thị D
-Hoàng Văn E
-Đặng Thị F
-Vũ Thị G
-Bùi Văn H</textarea>
+TRÀ XGAI
+TRÀ CUTE
+KHÔI DEV</textarea>
         </div>
     </div>
 
