--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     <div class="particles" id="particles"></div>
 
     <div class="container">
-        <h1>🎡 RADOM CỦA KHÔI TRÀ   🎡</h1>
+        <h1>🎡 RADOM CỦA KHÔI    🎡</h1>
         
         <div class="wheel-container">
             <div class="pulse-ring"></div>
@@ -391,8 +391,7 @@
 
         <div class="names-input">
             <label for="namesList">📝 Danh sách tên (mỗi tên một dòng):</label>
-            <textarea id="namesList" placeholder="khoi&#10;tra&#10;dev&#10;lọ">TRÀ XGAI
-TRÀ CUTE
+            <textarea id="namesList" placeholder="khoi&#10;tra&#10;dev&#10;lọ">
 KHÔI DEV</textarea>
         </div>
     </div>
